--- a/maflibrary/build.gradle
+++ b/maflibrary/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile files('libs/universal-image-loader-1.9.5.jar')
     compile files('libs/gson-2.6.2.jar')
+    compile files('libs/mpandroidchartlibrary-2-2-4.jar')
     compile 'org.xutils:xutils:3.3.25'
 }
