--- a/maflibrary/build.gradle
+++ b/maflibrary/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile files('libs/gson-2.6.2.jar')
     compile files('libs/mpandroidchartlibrary-2-2-4.jar')
     compile 'org.xutils:xutils:3.3.25'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:23.4.0'
 }
