--- a/maflibrary/build.gradle
+++ b/maflibrary/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'org.xutils:xutils:3.3.25'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
 }
