--- a/maflibrary/build.gradle
+++ b/maflibrary/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.github.rey5137:material:1.2.2'
 }
