--- a/maflibrary/build.gradle
+++ b/maflibrary/build.gradle
@@ -24,12 +24,13 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
     compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:design:23.2.0'
     compile files('libs/universal-image-loader-1.9.5.jar')
     compile files('libs/gson-2.6.2.jar')
     compile files('libs/mpandroidchartlibrary-2-2-4.jar')
     compile 'org.xutils:xutils:3.3.25'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.github.rey5137:material:1.2.2'
 }
