--- a/maflibrary/build.gradle
+++ b/maflibrary/build.gradle
@@ -9,6 +9,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -33,4 +34,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.github.rey5137:material:1.2.2'
+    compile 'com.android.support:multidex:1.0.0'
 }
