--- a/maflibrary/build.gradle
+++ b/maflibrary/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.github.rey5137:material:1.2.2'
     compile 'com.android.support:multidex:1.0.0'
+    compile files('libs/zxing-3.2.1.jar')
 }
