--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,9 @@ android {
             signingConfig signingConfigs.release
         }
     }
-
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
