测试插入短信库

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,14 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
 
+    <!--&lt;!&ndash;  发送消息&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.SEND_SMS"/>-->
+    <!--&lt;!&ndash;  阅读消息&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.READ_SMS"/>-->
+    <!--  写入消息-->
+    <uses-permission android:name="android.permission.WRITE_SMS" />
+    <!--&lt;!&ndash; 接收消息 &ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.RECEIVE_SMS"/>-->
     <application
         android:name="com.maf.base.application.MAFProjectApplication"
         android:allowBackup="true"
@@ -44,6 +52,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
         <activity
             android:name="com.maf.base.test.MainActivity"
             android:screenOrientation="portrait"
@@ -55,7 +65,22 @@
         <activity
             android:name="com.maf.base.activity.ToastActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <!-- Adding -->
+                <action android:name="android.intent.action.SEND" />
+                <action android:name="android.intent.action.SENDTO" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="sms" />
+                <data android:scheme="smsto" />
+                <data android:scheme="mms" />
+                <data android:scheme="mmsto" />
+                <!-- End Adding -->
+            </intent-filter>
+        </activity>
         <activity
             android:name="com.maf.base.activity.ImageActivity"
             android:screenOrientation="portrait"
@@ -112,6 +137,41 @@
             android:name="com.maf.base.activity.MyViewTestActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <receiver
+            android:name="com.maf.base.receiver.MmsReceiver"
+            android:permission="android.permission.BROADCAST_WAP_PUSH">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.WAP_PUSH_DELIVER" />
+
+                <data android:mimeType="application/vnd.wap.mms-message" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.maf.base.receiver.SmsReceiver"
+            android:permission="android.permission.BROADCAST_SMS">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_DELIVER" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name="com.maf.base.receiver.SmsSendService"
+            android:exported="true"
+            android:permission="android.permission.SEND_RESPOND_VIA_MESSAGE">
+            <intent-filter>
+                <action android:name="android.intent.action.RESPOND_VIA_MESSAGE" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:scheme="sms" />
+                <data android:scheme="smsto" />
+                <data android:scheme="mms" />
+                <data android:scheme="mmsto" />
+            </intent-filter>
+
+        </service>
+
     </application>
 
 </manifest>
