--- a/maflibrary/build.gradle
+++ b/maflibrary/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile files('libs/mpandroidchartlibrary-2-2-4.jar')
     compile 'org.xutils:xutils:3.3.25'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.2'
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.github.rey5137:material:1.2.2'
     compile 'com.android.support:multidex:1.0.0'
