--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -162,6 +162,9 @@
             android:windowSoftInputMode="stateAlwaysHidden"/>
         <activity
             android:name="com.maf.base.activity.VideoPlayActivity"
+            android:fitsSystemWindows="true"
+            android:process=":vitamio"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="com.maf.base.activity.SystemTestActivity"
